<resources>
    <string name="app_name">Easy-Phone</string>
    <!-- MODULES -->
    <string name="module_dialer">APPEL</string>
    <string name="module_contacts">CONTACTS</string>
    <string name="module_sms">SMS</string>
    <string name="Google_About_SMS">Aujourd\'hui la politique de Google sur le Play Store interdit l\'accès aux SMS</string>
    <string name="module_email">E-MAIL</string>
    <string name="module_photo">PHOTOS</string>
    <string name="go_to_other_launcher">RETOURNER SUR L\'INTERFACE PAR DÉFAUT</string>
    <string name="go_to_systems_settings">PARAMÈTRES SYSTEME</string>
    <string name="module_real_call">CHOIX</string>
    <string name="module_gallery">GALERIE</string>
    <string name="module_empty">VIDE</string>
    <string name="button_gallery">Rechercher une Photo</string>
    <!-- Variable -->
    <string name="test_name">First Last</string>
    <string name="apps_name">Apps Name</string>
    <string name="test_number">06 78 90 12 34</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_number">Numérotez&#8230;</string>
    <string name="call">Appel de %1$s</string>
    <string name="sms">Envoi un SMS au %1$s</string>
    <string name="sms_with_out_variable">Envoi un SMS au </string>
    <string name="search">Recherche&#8230;</string>
    <!-- hint SMS-->
    <string name="phone_number_send_sms">N° contact</string>
    <string name="phone_text_sms_send">Votre Message&#8230;</string>
    <string name="send">Envoyer</string>
    <string name="nom_contact_sms">Inconnu</string>
    <string name="history_hint">Historique</string>
    <string name="historic_message_me">%1s\n ---Moi--- \n%2s</string>
    <string name="historic_message_other">%1s\n---%2s--- \n%3s</string>
    <!-- Permission -->
    <!-- CALL -->
    <string name="refuse_call">Vous avez refusé à Easy-Phone l\'accès aux appels par le téléphone</string>
    <string name="call_perm">Permission d\'accès aux appels</string>
    <string name="could_call_perm">Veuillez Autoriser l\'accès aux appels par le téléphone.</string>
    <string name="could_read_external_storage_perm">Veuillez Autoriser l\'accès aux données sur le mémoire du téléphone.</string>
    <string name="could_camera_perm">Veuillez Autoriser l\'accès à l\'appareil photo du téléphone.</string>
    <string name="your_number">Numéro</string>
    <string name="add_number">%1$s%2$s</string>
    <!--CHOICE CAMERA-->
    <string name="gallery">Galerie</string>
    <string name="camera">Appareil Photo</string>
    <string name="photo_taking">Photo Prise</string>
    <string name="not_detect_cam_app">Application Caméra non détecté</string>
    <!-- CONTACT -->
    <string name="refuse_contact">Vous avez refusé à Easy-Phone l\'accès aux contacts du téléphone</string>
    <string name="contact_perm">Permission d\'accès aux contacts</string>
    <string name="could_contact_perm">Veuillez Autoriser l\'accès aux contact du téléphone.</string>
    <!-- SMS -->
    <string name="refuse_sms">Vous avez refusé à Easy-Phone l\'accès aux sms du téléphone</string>
    <string name="sms_perm">Permission d\'accès aux sms</string>
    <string name="could_call_sms">Veuillez Autoriser l\'accès aux sms du téléphone.</string>
    <string name="me">Moi</string>
    <string name="sms_preview">SMS Preview</string>
    <!-- ADD CONTACT -->
    <string name="add_contact">AJOUTER CONTACT</string>
    <string name="cancel">ANNULER</string>
    <string name="add">AJOUTER</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom de Famille</string>
    <string name="contact_added">Contact Ajouté</string>
    <string name="accept_contact_write">Vous avez accepté d\'ajouter les contacts, appuyer à nouveau sur AJOUTER pour enregistrer votre contact.</string>
    <string name="refuse_contact_write">Vous avec refusé l\'accès à l\'écriture.</string>
    <string name="accept_permission">Bienvenue sur l\'application</string>
    <string name="refuse_permission">Relancer l\'application, vous avez refusé les permissions</string>
</resources>