<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".module_activity.AddContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|left|left"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/back"
                android:layout_width="100dp"
                android:layout_height="78dp"
                android:gravity="center|left|left"
                android:onClick="goBack"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:iconTint="@color/white"
                app:iconTint="@color/white"
                app:icon="@drawable/ic_action_name"
                app:iconGravity="textStart"
                app:iconSize="80sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/add_contact_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left|left"
                android:text="@string/add_contact"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textSize="60sp"
                android:textStyle="bold"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toEndOf="@+id/back"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/number_in_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:autoSizeTextType="uniform"
                android:text="Numero Contact"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:background="@color/black"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                style="@style/my_stroke" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:textColorHint="#999"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                style="@style/my_stroke"/>
            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:textColorHint="#999"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                style="@style/my_stroke"/>
            <Button
                android:id="@+id/add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:iconTint="@color/white"
                app:strokeColor="@color/hos_blue"
                app:strokeWidth="4dp"/>
            <Button
                android:id="@+id/cancel_add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:iconTint="@color/white"
                app:strokeColor="@color/hos_blue"
                app:strokeWidth="4dp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>